# chordy

./: .gitignore  CMakeLists.txt  README.md  build.sh  chordy.spec  main.py  requirements.txt
chordy-cpp/: README.md
chordy-cpp/lib/GLFW/: glfw3.h
chordy-cpp/src/: main.cpp
chordy-py/src/: chord.py
cpp/: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  dist.sh  dmg.sh  res.cmake
cpp/cmake/: res.cmake
cpp/lib/: app.h  chord.h
cpp/src/: app.cpp  chord.cpp  main.cpp
lib/: chord.h  patest.h  readerwriterqueue.h
lib/GLFW/: glfw3native.h
py/: LICENSE  README.md
res/: A_D_Em_G_Bm_output
src/: app.cpp  chord.cpp  chord.py  icon.icns  main.py  polyphonic.py
